Fix various issues with database access Fix transfer pages